--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     height: 300px;
     width: 700px;
     margin: 30px auto;
+    position: relative;
 }
 #carousel .gallery {
     height: 100%;
@@ -23,9 +24,21 @@
 #carousel img {
     max-width: 100%;
     height: auto;
-    object-fit: contain;
+    object-fit: cover;
     display: none;
 }
 #carousel img.active {
     display: block;
+}
+#carousel .bi {
+    position: absolute;
+    translate: -50%;
+    font-size: 2rem;
+    cursor: pointer;
+}
+#prev {
+    right: 105%;
+}
+#next {
+    left: 105%;
 }
