fixed image problem

--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@
     height: 100%;
 }
 #carousel img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 120%;
     object-fit: cover;
     display: none;
 }
