--- a/style.css
+++ b/style.css
@@ -12,9 +12,35 @@
 
 /** Main CSS */
 
+body {
+    background-color: #1B2938;
+}
+.navbar {
+ background-color: #171A20;
+}
+.nav-item {
+    color: white;
+    list-style: none;
+    padding: 0 20px;
+}
+.btn-success {
+    background-color: #5C7E0F !important;
+    border-radius: 0;
+    border: #5C7E0F;
+}
+
+/* jumbotron */
+#jumbotron {
+    background-image: url(img/4768f0e6-d9a0-4580-b361-efe3fa1696b2.jpg);
+    background-repeat: no-repeat;
+    object-fit: cover;
+    background-size: 100vw;
+    height: 500px;
+    padding-top: 5px;
+}
 #carousel {
-    height: 300px;
-    width: 700px;
+    height: 350px;
+    width: 900px;
     margin: 30px auto;
     position: relative;
 }
@@ -35,12 +61,28 @@
     transform: translate(-50%, -50%);
     font-size: 2rem;
     cursor: pointer;
+    color: white;
 }
 #prev {
-    right: 100%;
-    top:150px;
+    right: 102%;
+    top:200px;
 }
 #next {
-    left: 105%;
-    top:150px;
+    left: 106%;
+    top:200px;
+}
+
+/* banner */
+
+.banner {
+    padding-top: 8rem;
+    gap: 30px;
+}
+
+/* footer */
+#upper-footer {
+    background-color:black;
+}
+#lower-footer {
+    background-color: #171A20;
 }
