--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@ body {
     height: 500px;
     padding-top: 5px;
 }
+#jumbo-nav {
+    background-color: rgba(29, 59, 126, 0.8) !important;
+    padding: 10px 10px;
+    margin-top: 3rem;
+}
+
 #carousel {
     height: 350px;
     width: 900px;
@@ -74,8 +80,12 @@ body {
 
 /* banner */
 
-.banner {
+.banner-title {
     padding-top: 8rem;
+    padding-bottom: 2rem;
+
+}
+.banner {
     gap: 30px;
 }
 
